--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -18,6 +18,7 @@
         <ul>
             <li><a href="home">Home (accessible à tous !)</a></li>
             <li><a href="login">Login (pour se connecter !)</a></li>
+            <li><a href="register">S'inscrire</a></li>
             <li><a href="news">News (accessible aux inscrits !)</a></li>
             <li><a href="{{ path('app_logout') }}">Logout</a></li>
         </ul>
