--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -16,10 +16,10 @@
     <body>
     <nav>
         <ul>
-            <li><a href="home">Home (accessible à tous !)</a></li>
-            <li><a href="login">Login (pour se connecter !)</a></li>
-            <li><a href="register">S'inscrire</a></li>
-            <li><a href="news">News (accessible aux inscrits !)</a></li>
+            <li><a href="{{ path('home') }}">Home (accessible à tous !)</a></li>
+            <li><a href="{{ path('app_login') }}">Login (pour se connecter !)</a></li>
+            <li><a href="{{ path('app_register') }}">S'inscrire</a></li>
+            <li><a href="{{ path('news') }}">News (accessible aux inscrits !)</a></li>
             <li><a href="{{ path('app_logout') }}">Logout</a></li>
         </ul>
     </nav>
