--- a/templates/gv_news/index.html.twig
+++ b/templates/gv_news/index.html.twig
@@ -1,20 +1,20 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello GVNewsController!{% endblock %}
-
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
+<section class="articles">
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+    {%  for article in articles %}
+        <article>
+            <h2>Titre article</h2>
+            <div class="metadata">Ecrit le 10/05/2018 à 19:00</div>
+            <div class="content">
+                <img src="http://placehold.it/350x150" alt="">
+                <p>aezhueuiheazaezhuieazuezauhea</p>
+                <p>aezhueuiheazaezhuieazuezauhea</p>
+                <a href="{{ path('news_show') }}" class="btn btn-primary">Lire la suite</a>
+            </div>
+        </article>
+    {% endfor %}
+</section>
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ 'C:/projets/m3104/sf/src/Controller/GVNewsController.php'|file_link(0) }}">src/Controller/GVNewsController.php</a></code></li>
-        <li>Your template at <code><a href="{{ 'C:/projets/m3104/sf/templates/gv_news/index.html.twig'|file_link(0) }}">templates/gv_news/index.html.twig</a></code></li>
-    </ul>
-</div>
 {% endblock %}
