Ajout de formulaire de création d'article

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -21,6 +21,7 @@
             <li><a href="{{ path('app_register') }}">S'inscrire</a></li>
             <li><a href="{{ path('news') }}">News (accessible aux inscrits !)</a></li>
             <li><a href="{{ path('app_logout') }}">Logout</a></li>
+            <li><a href="{{ path('news_create') }}">Cree un article</a></li>
         </ul>
     </nav>
     {% if app.user %}
