--- a/templates/gv_news/show.html.twig
+++ b/templates/gv_news/show.html.twig
@@ -3,13 +3,11 @@
 {% block body %}
 
     <article>
-        <h2>titre article</h2>
-        <div class="metadata">Ecrit le 10/05/2018 à 19:00</div>
+        <h2>{{ article.title }}</h2>
+        <div class="metadata">Ecrit le {{ article.createAt | date('d/m/y') }} à {{ article.createAt | date('H:i') }}</div>
         <div class="content">
-            <img src="http://placehold.it/350x150" alt="">
-            <p>aezhueuiheazaezhuieazuezauhea</p>
-            <p>aezhueuiheazaezhuieazuezauhea</p>
-            <p>aezhueuiheaz aezhueuiheazaezhuieazuezauhea aezhueuiheazaezhuieazuezauhea aezhueuiheazaezhuieazuezauhea aezhueuiheazaezhuieazuezauhea aezhueuiheazaezhuieazuezauheaaezhuieazuezauhea</p>
+            <img src="{{ article.image }}" alt="">
+            {{ article.content | raw }}
         </div>
     </article>
 
