--- a/templates/gv_news/create.html.twig
+++ b/templates/gv_news/create.html.twig
@@ -2,14 +2,24 @@
 
 {% block body %}
 
-    <h1>Création d'un article</h1>
+    {% if editMode %}
+        <h1>Modification de l'article</h1>
+    {% else %}
+        <h1>Création d'un article</h1>
+    {% endif %}
 
     {{ form_start(formArticle) }}
 
     {{ form_row(formArticle.title,{'attr':{'placeholder':"Titre de l'article"}}) }}
     {{ form_row(formArticle.content,{'attr':{'placeholder':"Contenu de l'article"}}) }}
     {{ form_row(formArticle.image,{'attr':{'placeholder':"Image de l'article"}}) }}
-    <button type="submit" class="btn btn-success">Ajouter l'article</button>
+    <button type="submit" class="btn btn-success">
+        {% if editMode %}
+            Enregistrer les modifications
+        {% else %}
+            Ajouter article
+        {% endif %}
+    </button>
 
     {{ form_end(formArticle) }}
 
