--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -17,11 +17,15 @@
     <nav>
         <ul>
             <li><a href="{{ path('home') }}">Home (accessible à tous !)</a></li>
-            <li><a href="{{ path('app_login') }}">Login (pour se connecter !)</a></li>
-            <li><a href="{{ path('app_register') }}">S'inscrire</a></li>
+            {% if app.user %}
+            {% else %}
+                <li><a href="{{ path('app_login') }}">Login (pour se connecter !)</a></li>
+                <li><a href="{{ path('app_register') }}">S'inscrire</a></li>
+            {% endif %}
             <li><a href="{{ path('news') }}">News (accessible aux inscrits !)</a></li>
-            <li><a href="{{ path('app_logout') }}">Logout</a></li>
-            <li><a href="{{ path('news_create') }}">Cree un article</a></li>
+            {% if is_granted('ROLE_ADMIN') %}
+                <li><a href="{{ path('news_create') }}">Cree un article</a></li>
+            {% endif %}
         </ul>
     </nav>
     {% if app.user %}
