--- a/templates/gv_news/index.html.twig
+++ b/templates/gv_news/index.html.twig
@@ -1,16 +1,16 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-<section class="articles">
+<section class="newsList">
 
-    {%  for article in articles %}
+    {%  for news in newsList %}
         <article>
-            <h2>{{ article.title }}</h2>
-            <div class="metadata">Ecrit le {{ article.createAt | date('d/m/Y')}} à {{ article.createAt | date('H:i') }}</div>
+            <h2>{{ news.title }}</h2>
+            <div class="metadata">Ecrit le {{ news.createAt | date('d/m/Y')}} à {{ news.createAt | date('H:i') }}</div>
             <div class="content">
-                <img src="{{ article.image }}" alt="">
-                {{ article.content | raw }}
-                <a href="{{ path('news_show', {'id':article.id}) }}" class="btn btn-primary">Lire la suite</a>
+                <img src="{{ news.image }}" alt="">
+                {{ news.content | raw }}
+                <a href="{{ path('news_show', {'id':news.id}) }}" class="btn btn-primary">Lire la suite</a>
             </div>
         </article>
     {% endfor %}
