--- a/templates/gv_news/show.html.twig
+++ b/templates/gv_news/show.html.twig
@@ -3,11 +3,11 @@
 {% block body %}
 
     <article>
-        <h2>{{ article.title }}</h2>
-        <div class="metadata">Ecrit le {{ article.createAt | date('d/m/y') }} à {{ article.createAt | date('H:i') }}</div>
+        <h2>{{ news.title }}</h2>
+        <div class="metadata">Ecrit le {{ news.createAt | date('d/m/y') }} à {{ news.createAt | date('H:i') }}</div>
         <div class="content">
-            <img src="{{ article.image }}" alt="">
-            {{ article.content | raw }}
+            <img src="{{ news.image }}" alt="">
+            {{ news.content | raw }}
         </div>
     </article>
 
