--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -14,35 +14,105 @@
     </head>
 
     <body>
-    <nav>
-        <ul>
-            <li><a href="{{ path('home') }}">Home (accessible à tous !)</a></li>
+        <header>
+            <nav>
+                <ul>
+                    <li><a href="{{ path('home') }}">Home (accessible à tous !)</a></li>
+                    {% if app.user %}
+                    {% else %}
+                        <li><a href="{{ path('app_login') }}">Login (pour se connecter !)</a></li>
+                        <li><a href="{{ path('app_register') }}">S'inscrire</a></li>
+                    {% endif %}
+                    <li><a href="{{ path('news') }}">News (accessible aux inscrits !)</a></li>
+                    {% if is_granted('ROLE_ADMIN') %}
+                        <li><a href="{{ path('news_create') }}">Cree un article</a></li>
+                    {% endif %}
+                </ul>
+            </nav>
             {% if app.user %}
-            {% else %}
-                <li><a href="{{ path('app_login') }}">Login (pour se connecter !)</a></li>
-                <li><a href="{{ path('app_register') }}">S'inscrire</a></li>
+                <div class="mb-3">
+                    Bonjour, {{ app.user.username }}, <a href="{{ path('app_logout') }}">Logout</a>
+                </div>
             {% endif %}
-            <li><a href="{{ path('news') }}">News (accessible aux inscrits !)</a></li>
-            {% if is_granted('ROLE_ADMIN') %}
-                <li><a href="{{ path('news_create') }}">Cree un article</a></li>
-            {% endif %}
-        </ul>
-    </nav>
-    {% if app.user %}
-        <div class="mb-3">
-            Bonjour, {{ app.user.username }}, <a href="{{ path('app_logout') }}">Logout</a>
-        </div>
-    {% endif %}
+        </header>
+
+
         {% block body %}{% endblock %}
     </body>
 </html>
 <style>
-    ul{
+
+    html, body, div, span, applet, object, iframe,
+    h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+    a, abbr, acronym, address, big, cite, code,
+    del, dfn, em, img, ins, kbd, q, s, samp,
+    small, strike, strong, sub, sup, tt, var,
+    b, u, i, center,
+    dl, dt, dd, ol, ul, li,
+    fieldset, form, label, legend,
+    table, caption, tbody, tfoot, thead, tr, th, td,
+    article, aside, canvas, details, embed,
+    figure, figcaption, footer, header, hgroup,
+    menu, nav, output, ruby, section, summary,
+    time, mark, audio, video {
+        margin: 0;
+        padding: 0;
+        border: 0;
+        font-size: 100%;
+        font: inherit;
+        vertical-align: baseline;
+    }
+    /* HTML5 display-role reset for older browsers */
+    article, aside, details, figcaption, figure,
+    footer, header, hgroup, menu, nav, section {
+        display: block;
+    }
+    body {
+        line-height: 1;
+    }
+    ol, ul {
+        list-style: none;
+    }
+    blockquote, q {
+        quotes: none;
+    }
+    blockquote:before, blockquote:after,
+    q:before, q:after {
+        content: '';
+        content: none;
+    }
+    table {
+        border-collapse: collapse;
+        border-spacing: 0;
+    }
+
+
+    /*CUSTOM CSS*/
+
+
+    header a {
+        color: inherit;
+        text-decoration: none;
+    }
+    header a:hover {
+        text-decoration:none;
+        cursor:pointer;
+        background-color: black;
+    }
+    header ul{
         display:flex;
         flex-direction:row;
         list-style: none;
     }
-    nav ul li{
+    header nav ul li{
+        padding-left:20px;
+    }
+    header{
+        display:flex;
+        justify-content: space-between;
+        background-color: red;
+        color:white;
         padding:20px;
+        font-family: Montserrat;
     }
 </style>
