--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -23,9 +23,13 @@
                         <li><a href="{{ path('app_login') }}">Login (pour se connecter !)</a></li>
                         <li><a href="{{ path('app_register') }}">S'inscrire</a></li>
                     {% endif %}
-                    <li><a href="{{ path('news') }}">News (accessible aux inscrits !)</a></li>
+                    {% if is_granted('ROLE_ADMIN')%}
+                        <li><a href="{{ path('news_index') }}">News admin (accessible aux inscrits !)</a></li>
+                    {% else%}
+                        <li><a href="{{ path('news') }}">News (accessible aux inscrits !)</a></li>
+                    {% endif %}
                     {% if is_granted('ROLE_ADMIN') %}
-                        <li><a href="{{ path('news_create') }}">Cree un article</a></li>
+                        <li><a href="{{ path('news_new') }}">Cree un article</a></li>
                     {% endif %}
                 </ul>
             </nav>
