--- a/templates/gv_admin_news/edit.html.twig
+++ b/templates/gv_admin_news/edit.html.twig
@@ -7,7 +7,7 @@
 
     {{ include('gv_admin_news/_form.html.twig', {'button_label': 'Update'}) }}
 
-    <a href="{{ path('news_index') }}">back to list</a>
+    <a href="{{ path('admin_news_index') }}">back to list</a>
 
     {{ include('gv_admin_news/_delete_form.html.twig') }}
 {% endblock %}
