--- a/templates/gv_admin_news/new.html.twig
+++ b/templates/gv_admin_news/new.html.twig
@@ -7,5 +7,5 @@
 
     {{ include('gv_admin_news/_form.html.twig') }}
 
-    <a href="{{ path('news_index') }}">back to list</a>
+    <a href="{{ path('admin_news_index') }}">back to list</a>
 {% endblock %}
