--- a/templates/gv_admin_news/show.html.twig
+++ b/templates/gv_admin_news/show.html.twig
@@ -30,9 +30,9 @@
         </tbody>
     </table>
 
-    <a href="{{ path('news_index') }}">back to list</a>
+    <a href="{{ path('admin_news_index') }}">back to list</a>
 
-    <a href="{{ path('news_edit', {'id': news.id}) }}">edit</a>
+    <a href="{{ path('admin_news_edit', {'id': news.id}) }}">edit</a>
 
     {{ include('gv_admin_news/_delete_form.html.twig') }}
 {% endblock %}
