--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -3,8 +3,10 @@
     <head>
         <meta charset="UTF-8">
         <title>{% block title %}Welcome!{% endblock %}</title>
+        <link rel="stylesheet" href="https://bootswatch.com/5/morph/bootstrap.min.css">
         {# Run `composer require symfony/webpack-encore-bundle`
            and uncomment the following Encore helpers to start using Symfony UX #}
+
         {% block stylesheets %}
         {% endblock %}
 
@@ -15,32 +17,42 @@
 
     <body>
         <header>
-            <nav>
-                <ul>
-                    <li><a href="{{ path('home') }}">Home (accessible à tous !)</a></li>
-                    {% if app.user %}
-                    {% else %}
-                        <li><a href="{{ path('app_login') }}">Login (pour se connecter !)</a></li>
-                        <li><a href="{{ path('app_register') }}">S'inscrire</a></li>
-                    {% endif %}
-                    {% if is_granted('ROLE_ADMIN')%}
-                        <li><a href="{{ path('admin_news_index') }}">News admin (accessible aux inscrits !)</a></li>
-                    {% else%}
-                        <li><a href="{{ path('news') }}">News (accessible aux inscrits !)</a></li>
-                    {% endif %}
-                    {% if is_granted('ROLE_ADMIN') %}
-                        <li><a href="{{ path('admin_news_new') }}">Cree un article</a></li>
-                    {% endif %}
-                    {% if is_granted('ROLE_ADMIN') %}
-                        <li><a href="{{ path('admin_news_new') }}">Panneau admin</a></li>
-                    {% endif %}
-                </ul>
-            </nav>
-            {% if app.user %}
-                <div class="mb-3">
-                    Bonjour, {{ app.user.username }}, <a href="{{ path('app_logout') }}">Logout</a>
+
+            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                <div class="container-fluid">
+                    <a class="navbar-brand" href="/">ApexUnite</a>
+
+                    <div class="collapse navbar-collapse" id="navbarColor03">
+
+                        <ul class="navbar-nav me-auto">
+
+                            <li class="nav-item"><a class="nav-link" href="{{ path('home') }}">Home</a></li>
+                            {% if is_granted('ROLE_ADMIN')%}
+                                <li class="nav-item"><a class="nav-link" href="{{ path('admin_news_index') }}">News admin</a></li>
+                            {% else%}
+                                <li class="nav-item"><a class="nav-link" href="{{ path('news') }}">News</a></li>
+                            {% endif %}
+                            {% if is_granted('ROLE_ADMIN') %}
+                                <li class="nav-item"><a class="nav-link" href="{{ path('admin_news_new') }}">Cree un article</a></li>
+                            {% endif %}
+                            {% if is_granted('ROLE_ADMIN') %}
+                                <li class="nav-item"><a class="nav-link" href="{{ path('user_index') }}">User</a></li>
+                            {% endif %}
+                            {% if app.user %}
+                                <li class="nav-link">Bonjour, {{ app.user.username }}</li>
+                            {% endif %}
+                            {% if app.user %}
+                                <li class="nav-item"><a class="nav-link" href="{{ path('app_logout') }}">Logout</a></li>
+                            {% endif %}
+                            {% if app.user %}
+                            {% else %}
+                                <li class="nav-item"><a class="nav-link" href="{{ path('app_login') }}">Se connecter</a></li>
+                                <li class="nav-item"><a class="nav-link" href="{{ path('app_register') }}">S'inscrire</a></li>
+                            {% endif %}
+                        </ul>
+                    </div>
                 </div>
-            {% endif %}
+            </nav>
         </header>
 
 
@@ -48,78 +60,4 @@
     </body>
 </html>
 <style>
-
-    html, body, div, span, applet, object, iframe,
-    h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-    a, abbr, acronym, address, big, cite, code,
-    del, dfn, em, img, ins, kbd, q, s, samp,
-    small, strike, strong, sub, sup, tt, var,
-    b, u, i, center,
-    dl, dt, dd, ol, ul, li,
-    fieldset, form, label, legend,
-    table, caption, tbody, tfoot, thead, tr, th, td,
-    article, aside, canvas, details, embed,
-    figure, figcaption, footer, header, hgroup,
-    menu, nav, output, ruby, section, summary,
-    time, mark, audio, video {
-        margin: 0;
-        padding: 0;
-        border: 0;
-        font-size: 100%;
-        font: inherit;
-        vertical-align: baseline;
-    }
-    /* HTML5 display-role reset for older browsers */
-    article, aside, details, figcaption, figure,
-    footer, header, hgroup, menu, nav, section {
-        display: block;
-    }
-    body {
-        line-height: 1;
-    }
-    ol, ul {
-        list-style: none;
-    }
-    blockquote, q {
-        quotes: none;
-    }
-    blockquote:before, blockquote:after,
-    q:before, q:after {
-        content: '';
-        content: none;
-    }
-    table {
-        border-collapse: collapse;
-        border-spacing: 0;
-    }
-
-
-    /*CUSTOM CSS*/
-
-
-    header a {
-        color: inherit;
-        text-decoration: none;
-    }
-    header a:hover {
-        text-decoration:none;
-        cursor:pointer;
-        background-color: black;
-    }
-    header ul{
-        display:flex;
-        flex-direction:row;
-        list-style: none;
-    }
-    header nav ul li{
-        padding-left:20px;
-    }
-    header{
-        display:flex;
-        justify-content: space-between;
-        background-color: red;
-        color:white;
-        padding:20px;
-        font-family: Montserrat;
-    }
 </style>
