--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -39,6 +39,16 @@
                             {% if is_granted('ROLE_ADMIN') %}
                                 <li class="nav-item"><a class="nav-link" href="{{ path('user_index') }}">User</a></li>
                             {% endif %}
+
+
+                            {% if is_granted('ROLE_ADMIN')%}
+                                <li class="nav-item"><a class="nav-link" href="{{ path('admin_potw_index') }}">potw admin</a></li>
+                            {% else%}
+                                <li class="nav-item"><a class="nav-link" href="{{ path('potw_index') }}">potw</a></li>
+                            {% endif %}
+
+
+
                             {% if app.user %}
                                 <li class="nav-link">Bonjour, {{ app.user.username }}</li>
                             {% endif %}
