--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -47,6 +47,12 @@
                                 <li class="nav-item"><a class="nav-link" href="{{ path('potw_index') }}">potw</a></li>
                             {% endif %}
 
+                            {% if is_granted('ROLE_ADMIN')%}
+                                <li class="nav-item"><a class="nav-link" href="{{ path('admin_wr_index') }}">worldrecords admin</a></li>
+                            {% else%}
+                                <li class="nav-item"><a class="nav-link" href="{{ path('wr_index') }}">worldrecords</a></li>
+                            {% endif %}
+
 
 
                             {% if app.user %}
