--- a/templates/gv_index/news.html.twig
+++ b/templates/gv_index/news.html.twig
@@ -22,7 +22,7 @@
                 <td>{{ news.id }}</td>
                 <td>{{ news.title }}</td>
                 <td>{{ news.content }}</td>
-                <img src="{{ news.image }}" class="image">
+                <td><img src="{{ news.image }}" class="image"></td>
                 <td>{{ news.createAt ? news.createAt|date('Y-m-d H:i:s') : '' }}</td>
                 <td>
                     <a href="{{ path('news_show', {'id': news.id}) }}">show</a>
