--- a/templates/article/index.html.twig
+++ b/templates/article/index.html.twig
@@ -7,15 +7,15 @@
 
     <table class="table">
         <thead>
-        <tr>
-            <th>Id</th>
-            <th>Titre</th>
-            <th>Contenu</th>
-            <th>CreatedAt</th>
-            <th>Auteur</th>
-            <th>Image</th>
-            <th>actions</th>
-        </tr>
+            <tr>
+                <th>Id</th>
+                <th>Titre</th>
+                <th>Contenu</th>
+                <th>CreatedAt</th>
+                <th>Auteur</th>
+                <th>Image</th>
+                <th>actions</th>
+            </tr>
         </thead>
         <tbody>
         {% for article in articles %}
@@ -25,10 +25,10 @@
                 <td>{{ article.contenu | raw }}</td>
                 <td>{{ article.createdAt ? article.createdAt|date('Y-m-d H:i:s') : '' }}</td>
                 <td>{{ article.auteur }}</td>
-                <td>{{ article.image }}</td>
                 <td><img src="{{ article.image }}"></td>
                 <td>
-                    <a href="{{ path('article_show', {'id': article.id}) }}">show</a>
+                    <a href="{{ path('admin_article_show', {'id': article.id}) }}">show</a>
+                    <a href="{{ path('admin_article_edit', {'id': article.id}) }}">edit</a>
                 </td>
             </tr>
         {% else %}
@@ -36,7 +36,9 @@
                 <td colspan="7">no records found</td>
             </tr>
         {% endfor %}
+        {{ knp_pagination_render(articles) }}
         </tbody>
     </table>
 
+    <a href="{{ path('admin_article_new') }}">Create new</a>
 {% endblock %}
