Ajout date de creation et auteur sur /video et /article

--- a/templates/gv_index/article.html.twig
+++ b/templates/gv_index/article.html.twig
@@ -3,39 +3,23 @@
 {% block title %}Article index{% endblock %}
 
 {% block body %}
-    <h1>Article index</h1>
+    <h1>Tous nos articles</h1>
 
-    <table class="table">
-        <thead>
-        <tr>
-            <th>Id</th>
-            <th>Titre</th>
-            <th>Contenu</th>
-            <th>CreatedAt</th>
-            <th>Auteur</th>
-            <th>Image</th>
-            <th>actions</th>
-        </tr>
-        </thead>
-        <tbody>
         {% for article in articles %}
-            <tr>
-                <td>{{ article.id }}</td>
-                <td>{{ article.titre }}</td>
-                <td>{{ article.contenu | raw }}</td>
-                <td>{{ article.createdAt ? article.createdAt|date('Y-m-d H:i:s') : '' }}</td>
-                <td>{{ article.auteur }}</td>
-                <td><img src="{{ article.image }}"></td>
-                <td>
+            <ul>
+                <li><h2>{{ article.titre }}</h2></li>
+                <li>Crée le {{ article.createdAt ? article.createdAt|date('d-m-Y H:i:s') : '' }} par {{ article.auteur }}</li>
+                <li>{{ article.contenu | raw }}</li>
+                <li><img src="{{ article.image }}"></li>
+                <li>
                     <a href="{{ path('article_show', {'id': article.id}) }}">show</a>
-                </td>
-            </tr>
+                </li>
+            </ul>
         {% else %}
             <tr>
                 <td colspan="7">no records found</td>
             </tr>
         {% endfor %}
-        </tbody>
-    </table>
 
+        {{ knp_pagination_render(articles) }}
 {% endblock %}
