--- a/templates/gv_index/news.html.twig
+++ b/templates/gv_index/news.html.twig
@@ -36,6 +36,7 @@
                 <td colspan="7">no records found</td>
             </tr>
         {% endfor %}
+        {{ knp_pagination_render(articles) }}
         </tbody>
     </table>
 
