--- a/templates/gv_index/playoftheweek.html.twig
+++ b/templates/gv_index/playoftheweek.html.twig
@@ -1,9 +1,9 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}ApexUnite | FunnyStuff{% endblock %}
+{% block title %}ApexUnite | Play of the week{% endblock %}
 
 {% block body %}
-    <h1>FunnyStuff</h1>
+    <h1>Play of the week</h1>
 
     {% for video in videos %}
         <ul>
