--- a/templates/article/index.html.twig
+++ b/templates/article/index.html.twig
@@ -29,6 +29,7 @@
                 <td>
                     <a href="{{ path('admin_article_show', {'id': article.id}) }}">show</a>
                     <a href="{{ path('admin_article_edit', {'id': article.id}) }}">edit</a>
+                    {{ include('article/_delete_form.html.twig') }}
                 </td>
             </tr>
         {% else %}
