--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -3,12 +3,12 @@
     <head>
         <meta charset="UTF-8">
         <title>{% block title %}Welcome!{% endblock %}</title>
-        <link rel="stylesheet" href="https://bootswatch.com/5/morph/bootstrap.min.css">
-        <link rel="stylesheet" href="{{ asset('Asset/style.css') }}">
         {# Run `composer require symfony/webpack-encore-bundle`
            and uncomment the following Encore helpers to start using Symfony UX #}
 
         {% block stylesheets %}
+            <link rel="stylesheet" href="{{ asset('asset/style.css') }}">
+            <link rel="stylesheet" href="https://bootswatch.com/5/morph/bootstrap.min.css">
         {% endblock %}
 
         {% block javascripts %}
@@ -24,7 +24,6 @@
                     <a class="navbar-brand" href="/">ApexUnite</a>
                     <div class="collapse navbar-collapse" id="navbarColor03">
                         <ul class="navbar-nav me-auto">
-                            <li class="nav-item"><a class="nav-link" href="{{ path('home') }}">Home</a></li>
                             {% if is_granted('ROLE_ADMIN') %}
                                 <li class="nav-item"><a class="nav-link" href="{{ path('user_index') }}">User</a></li>
                                 <li class="nav-item"><a class="nav-link" href="{{ path('admin_video_index') }}">Video</a></li>
@@ -36,6 +35,7 @@
                                 <li class="nav-item"><a class="nav-link" href="{{ path('article_index') }}">Article</a></li>
                                 <li class="nav-item"><a class="nav-link" href="{{ path('news_index') }}">news</a></li>
                                 <li class="nav-item"><a class="nav-link" href="{{ path('funnystuff_index') }}">funnystuff</a></li>
+                                <li class="nav-item"><a class="nav-link" href="{{ path('playoftheweek_index') }}">play of the week</a></li>
                                 <li class="nav-item"><a class="nav-link" href="{{ path('contact') }}">contact</a></li>
                             {% endif %}
                             {% if app.user %}
