--- a/templates/video/index.html.twig
+++ b/templates/video/index.html.twig
@@ -29,6 +29,7 @@
                 <td>
                     <a href="{{ path('admin_video_show', {'id': video.id}) }}">show</a>
                     <a href="{{ path('admin_video_edit', {'id': video.id}) }}">edit</a>
+                    {{ include('video/_delete_form.html.twig') }}
                 </td>
             </tr>
         {% else %}
@@ -36,6 +37,7 @@
                 <td colspan="7">no records found</td>
             </tr>
         {% endfor %}
+        {{ knp_pagination_render(videos) }}
         </tbody>
     </table>
 
