--- a/templates/gv_index/index.html.twig
+++ b/templates/gv_index/index.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello GVHomeController!{% endblock %}
+{% block title %}ApexUnite{% endblock %}
 
 {% block body %}
-    <h1>Bienvenue sur mon site</h1>
+    <h1>Bienvenue sur ApexUnite</h1>
 {% endblock %}
