--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -49,6 +49,9 @@
                                 <li class="nav-item"><a class="nav-link" href="{{ path('app_login') }}">Se connecter</a></li>
                                 <li class="nav-item"><a class="nav-link" href="{{ path('app_register') }}">S'inscrire</a></li>
                             {% endif %}
+                                {{ render(controller(
+                                        'App\\Controller\\SearchController::searchBar'
+                                )) }}
                         </ul>
                     </div>
                 </div>
