--- a/templates/article/index.html.twig
+++ b/templates/article/index.html.twig
@@ -41,5 +41,5 @@
         </tbody>
     </table>
 
-    <a href="{{ path('admin_article_new') }}">Create new</a>
+    <button type="button" class="btn btn-success"><a href="{{ path('admin_article_new') }}">Créer un nouvel article</a></button>
 {% endblock %}
