--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -35,5 +35,5 @@
         </tbody>
     </table>
 
-    <a href="{{ path('user_new') }}">Create new</a>
+    <button type="button" class="btn btn-success"><a href="{{ path('user_new') }}">Créer un nouveau utilisateur</a></button>
 {% endblock %}
