--- a/templates/video/index.html.twig
+++ b/templates/video/index.html.twig
@@ -40,6 +40,5 @@
         {{ knp_pagination_render(videos) }}
         </tbody>
     </table>
-
-    <a href="{{ path('admin_video_new') }}">Create new</a>
+    <button type="button" class="btn btn-success"><a href="{{ path('admin_video_new') }}">Créer une nouvelle vidéo</a></button>
 {% endblock %}
