--- a/templates/tag/index.html.twig
+++ b/templates/tag/index.html.twig
@@ -31,5 +31,5 @@
         </tbody>
     </table>
 
-    <a href="{{ path('admin_tag_new') }}">Create new</a>
+    <button type="button" class="btn btn-success"><a href="{{ path('admin_teg_new') }}">Créer un nouveau tag</a></button>
 {% endblock %}
