--- a/templates/type/index.html.twig
+++ b/templates/type/index.html.twig
@@ -31,5 +31,5 @@
         </tbody>
     </table>
 
-    <a href="{{ path('admin_type_new') }}">Create new</a>
+    <button type="button" class="btn btn-success"><a href="{{ path('admin_type_new') }}">Créer un nouveau type</a></button>
 {% endblock %}
