Ajout des raccourcies dernier funnystuff/potw sur home

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -78,4 +78,13 @@
 </html>
 <script src="https://bootswatch.com/_vendor/popper.js/dist/umd/popper.min.js"></script>
 <script src="https://bootswatch.com/_vendor/bootstrap/dist/js/bootstrap.min.js"></script>
-
+<style>
+    #articles,#videos{
+        display: flex;
+        flex-direction: row;
+    }
+    #videos div, #articles div{
+        min-width: 300px;
+        margin:10px;
+    }
+</style>
