--- a/templates/gv_index/index.html.twig
+++ b/templates/gv_index/index.html.twig
@@ -5,21 +5,43 @@
 {% block body %}
     <h1>Bienvenue sur ApexUnite</h1>
 
-    <div class="card border-primary mb-3" style="max-width: 20rem;">
-        <div class="card-header">Dernière news</div>
-        <div class="card-body">
-            <h4 class="card-title">{{ lastnews.titre | default("Aucune news créé") }}</h4>
-            <p class="card-text">{{ lastnews.contenu | default("Aucune news créé") | raw }}</p>
-            <a href="{{ path('article_show', {'id': lastnews.id | default("Aucune news créé")}) }}">Lire l'article</a>
+    <div id="articles">
+        <div class="card border-primary mb-3" style="max-width: 20rem;">
+            <div class="card-header">Dernière news</div>
+            <div class="card-body">
+                <h4 class="card-title">{{ lastnews.titre | default("Aucune news créé") }}</h4>
+                <p class="card-text">{{ lastnews.contenu | default("Aucune news créé") | raw }}</p>
+                <a href="{{ path('article_show', {'id': lastnews.id | default("Aucune news créé")}) }}">Lire l'article</a>
+            </div>
+        </div>
+
+        <div class="card border-primary mb-3" style="max-width: 20rem;">
+            <div class="card-header">Dernier tips</div>
+            <div class="card-body">
+                <h4 class="card-title">{{ lasttips.titre | default("Aucun tips créé") }}</h4>
+                <p class="card-text">{{ lasttips.contenu | default("Aucun tips créé") | raw }}</p>
+                <a href="{{ path('article_show', {'id': lasttips.id | default("Aucun tips créé")}) }}">Lire l'article</a>
+            </div>
         </div>
     </div>
 
-    <div class="card border-primary mb-3" style="max-width: 20rem;">
-        <div class="card-header">Dernier tips</div>
-        <div class="card-body">
-            <h4 class="card-title">{{ lasttips.titre | default("Aucun tips créé") }}</h4>
-            <p class="card-text">{{ lasttips.contenu | default("Aucun tips créé") | raw }}</p>
-            <a href="{{ path('article_show', {'id': lasttips.id | default("Aucun tips créé")}) }}">Lire l'article</a>
+    <div id="videos">
+        <div class="card border-primary mb-3" style="max-width: 20rem;">
+            <div class="card-header">Dernier Play of the week</div>
+            <div class="card-body">
+                <h4 class="card-title">{{ lastPOTW.titre | default("Aucun POTW créé") }}</h4>
+                <p class="card-text">{{ lastPOTW.description | default("Aucun POTW créé") | raw }}</p>
+                <a href="{{ path('video_show', {'id': lastPOTW.id | default("Aucun POTW créé")}) }}">Voir le play of the week</a>
+            </div>
+        </div>
+
+        <div class="card border-primary mb-3" style="max-width: 20rem;">
+            <div class="card-header">Dernier FunnyStuff</div>
+            <div class="card-body">
+                <h4 class="card-title">{{ lastFunnyStuff.titre | default("Aucun FunnyStuff créé") }}</h4>
+                <p class="card-text">{{ lastFunnyStuff.description | default("Aucun FunnyStuff créé") | raw }}</p>
+                <a href="{{ path('video_show', {'id': lastFunnyStuff.id | default("Aucun FunnyStuff créé")}) }}">Voir le funny stuff</a>
+            </div>
         </div>
     </div>
 
